[package]
name = "serp"
version = "0.1.0"
edition = "2021"
description = "Friendly (s)tring int(erp)olation wrapper for handlebars library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thedustinmiller/serp"
readme = "README.md"
keywords = ["handlebars", "template", "string", "interpolation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3"
